fix(AuthForm): fix footer spacing

--- a/src/components/AuthForm/AuthForm.module.scss
+++ b/src/components/AuthForm/AuthForm.module.scss
@@ -31,6 +31,7 @@
 
 .submit {
   margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .info {
